# devmind-os

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.codex/: config.toml
.codex/prompts/: pr-description.md  staff-implementation.md  staff-review.md
.codex/skills/discovery/: SKILL.md
.codex/skills/implementation/: SKILL.md
.codex/skills/planning/: SKILL.md
.codex/skills/pr-review/: SKILL.md
.codex/skills/security-review/: SKILL.md
.codex/skills/test-review/: SKILL.md
.github/workflows/: ci.yml
apps/api/: ask.py  dependencies.py  main.py
apps/worker/: evaluate_retrieval.py  ingest.py
data/evaluation/: retrieval-baseline.json
data/samples/: devmind-status.md  rag-smoke-test.md
docs/: architecture-roadmap.md  retrieval-evaluation.md
tests/: test_answer_question.py  test_api_ask.py  test_ask_cli.py  test_config.py  test_qdrant_retrieval.py  test_rag_chunking.py  test_rag_evaluation.py  test_worker_ingest.py
